--- a/assets/sass/_font.sass
+++ b/assets/sass/_font.sass
@@ -1,3 +1,52 @@
 @font-face 
   font-family: "Gilroy", sans-serif
-  src: url("../../fonts/Gilroy/gilroy-regular.ttf")
+  src: url("../../fonts/Gilroy/Gilroy-Black.woff")
+
+@font-face 
+  font-family: "Gilroy", sans-serif
+  src: url("../../fonts/Gilroy/Gilroy-Bold.woff")
+
+@font-face 
+  font-family: "Gilroy", sans-serif
+  src: url("../../fonts/Gilroy/Gilroy-Extrabold")
+
+@font-face 
+  font-family: "Gilroy", sans-serif
+  src: url("../../fonts/Gilroy/Gilroy-Medium.woff")
+
+@font-face 
+  font-family: "Gilroy", sans-serif
+  src: url("../../fonts/Gilroy/Gilroy-Regular.woff")
+
+@font-face 
+  font-family: "Gilroy", sans-serif
+  src: url("../../fonts/Gilroy/Gilroy-Semibold.woff")
+
+
+
+
+
+@font-face 
+  font-family: "ZingRustDemo", sans-serif
+  src: url("../../fonts/zing/ZingRustD2Demo-Base.otf") format("woff")
+  
+@font-face 
+  font-family: "ZingRustDemo", sans-serif
+  src: url("../../fonts/zing/ZingRustDemo-Base.otf") format("woff")
+  
+@font-face 
+  font-family: "ZingRustDemo", sans-serif
+  src: url("../../fonts/zing/ZingRustDemo-Sh1.otf") format("woff")
+  
+@font-face 
+  font-family: "ZingRustDemo", sans-serif
+  src: url("../../fonts/zing/ZingRustLH1Demo-Fill.otf") format("woff")
+  
+@font-face 
+  font-family: "ZingRustDemo", sans-serif
+  src: url("../../fonts/zing/ZingSansRustLDemo-Base.otf") format("woff")
+  
+@font-face 
+  font-family: "ZingRustDemo", sans-serif
+  src: url("../../fonts/zing/ZingScriptRustSBDemo-Base.otf") format("woff")
+  
