--- a/pug/layout/_header.pug
+++ b/pug/layout/_header.pug
@@ -4,3 +4,4 @@ header.header
   label.header__search(for="search") 
     svg(viewbox='0 0 50 50' width='50' height='50')
       use(xlink:href='../../assets/img/svg-sprite.svg#loc')
+    p вдплыывлаыващ
