--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,62 @@
 @font-face {
   font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/gilroy-regular.ttf");
+  src: url("../../fonts/Gilroy/Gilroy-Black.woff");
+}
+@font-face {
+  font-family: "Gilroy", sans-serif;
+  src: url("../../fonts/Gilroy/Gilroy-Bold.woff");
+}
+@font-face {
+  font-family: "Gilroy", sans-serif;
+  src: url("../../fonts/Gilroy/Gilroy-Extrabold");
+}
+@font-face {
+  font-family: "Gilroy", sans-serif;
+  src: url("../../fonts/Gilroy/Gilroy-Medium.woff");
+}
+@font-face {
+  font-family: "Gilroy", sans-serif;
+  src: url("../../fonts/Gilroy/Gilroy-Regular.woff");
+}
+@font-face {
+  font-family: "Gilroy", sans-serif;
+  src: url("../../fonts/Gilroy/Gilroy-Semibold.woff");
+}
+@font-face {
+  font-family: "ZingRustDemo", sans-serif;
+  src: url("../../fonts/zing/ZingRustD2Demo-Base.otf") format("woff");
+}
+@font-face {
+  font-family: "ZingRustDemo", sans-serif;
+  src: url("../../fonts/zing/ZingRustDemo-Base.otf") format("woff");
+}
+@font-face {
+  font-family: "ZingRustDemo", sans-serif;
+  src: url("../../fonts/zing/ZingRustDemo-Sh1.otf") format("woff");
+}
+@font-face {
+  font-family: "ZingRustDemo", sans-serif;
+  src: url("../../fonts/zing/ZingRustLH1Demo-Fill.otf") format("woff");
+}
+@font-face {
+  font-family: "ZingRustDemo", sans-serif;
+  src: url("../../fonts/zing/ZingSansRustLDemo-Base.otf") format("woff");
+}
+@font-face {
+  font-family: "ZingRustDemo", sans-serif;
+  src: url("../../fonts/zing/ZingScriptRustSBDemo-Base.otf") format("woff");
 }
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   color: inherit;
-  font-family: "Gilroy", sans-serif;
+  font-family: Gilroy, sans-serif;
+  font-weight: 500;
+}
+
+p {
+  font-family: ZingRustDemo, sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
