--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -15,4 +15,8 @@
   padding: 0
   text-decoration: none
   color: inherit
-  font-family: "Gilroy", sans-serif
+  font-family: $font-main
+  font-weight: 500
+
+p
+  font-family: $font-secondary
