--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -15,8 +15,11 @@
   padding: 0
   text-decoration: none
   color: inherit
-  font-family: $font-main
   font-weight: 500
 
-p
-  font-family: $font-secondary
+body
+  background: $bg
+
+.container
+  max-width: 80rem
+  margin: 0 auto
