--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,17 +46,43 @@
   font-family: "ZingRustDemo", sans-serif;
   src: url("../../fonts/zing/ZingScriptRustSBDemo-Base.otf") format("woff");
 }
+.header {
+  font-family: Gilroy, sans-serif;
+  display: flex;
+  align-items: center;
+}
+.header__logo {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.5625rem;
+}
+.header__search {
+  display: flex;
+  align-items: center;
+  padding: 1rem 1.125rem;
+  background: #504B4A;
+}
+.header__search input {
+  border: none;
+  outline: none;
+  background: none;
+}
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   color: inherit;
-  font-family: Gilroy, sans-serif;
   font-weight: 500;
 }
 
-p {
-  font-family: ZingRustDemo, sans-serif;
+body {
+  background: #403C3B;
+}
+
+.container {
+  max-width: 80rem;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=style.css.map */
