--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
+@font-face {
+  font-family: "Gilroy", sans-serif;
+  src: url("../../fonts/Gilroy/gilroy-regular.ttf");
+}
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   color: inherit;
+  font-family: "Gilroy", sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
