--- a/pug/layout/_header.pug
+++ b/pug/layout/_header.pug
@@ -3,11 +3,11 @@ header.header.container
   .header__info 
     label.header__search(for="search")
       ion-icon(name='location-outline')
-      input(type="text" id="search" placeholder="")
+      input(type="text" id="search" placeholder="Введите адрес доставки")
       ion-icon(name='search-outline')
     .header__info-phone 
       a(href="") 
-        ion-icon(name='search-outline')
+        ion-icon(name='call-outline')
         .header__info-contact 
           span Контакты
           a(href="tel:+7 (917) 510-57-59") +7 (917) 510-57-59
