--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,71 +1,130 @@
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/Gilroy-Black.woff");
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy/Gilroy-Black.woff");
 }
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/Gilroy-Bold.woff");
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy/Gilroy-Bold.woff");
 }
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/Gilroy-Extrabold");
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy/Gilroy-Extrabold");
 }
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/Gilroy-Medium.woff");
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy/Gilroy-Medium.woff");
 }
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/Gilroy-Regular.woff");
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy/Gilroy-Regular.woff");
 }
 @font-face {
-  font-family: "Gilroy", sans-serif;
-  src: url("../../fonts/Gilroy/Gilroy-Semibold.woff");
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy/Gilroy-Semibold.woff");
 }
 @font-face {
-  font-family: "ZingRustDemo", sans-serif;
-  src: url("../../fonts/zing/ZingRustD2Demo-Base.otf") format("woff");
+  font-family: "ZingRustDemo";
+  src: url("../fonts/zing/ZingRustD2Demo-Base.otf") format("woff");
 }
 @font-face {
-  font-family: "ZingRustDemo", sans-serif;
-  src: url("../../fonts/zing/ZingRustDemo-Base.otf") format("woff");
+  font-family: "ZingRustDemo";
+  src: url("../fonts/zing/ZingRustDemo-Base.otf") format("woff");
 }
 @font-face {
-  font-family: "ZingRustDemo", sans-serif;
-  src: url("../../fonts/zing/ZingRustDemo-Sh1.otf") format("woff");
+  font-family: "ZingRustDemo";
+  src: url("../fonts/zing/ZingRustDemo-Sh1.otf") format("woff");
 }
 @font-face {
-  font-family: "ZingRustDemo", sans-serif;
-  src: url("../../fonts/zing/ZingRustLH1Demo-Fill.otf") format("woff");
+  font-family: "ZingRustDemo";
+  src: url("../fonts/zing/ZingRustLH1Demo-Fill.otf") format("woff");
 }
 @font-face {
-  font-family: "ZingRustDemo", sans-serif;
-  src: url("../../fonts/zing/ZingSansRustLDemo-Base.otf") format("woff");
+  font-family: "ZingRustDemo";
+  src: url("../fonts/zing/ZingSansRustLDemo-Base.otf") format("woff");
 }
 @font-face {
-  font-family: "ZingRustDemo", sans-serif;
-  src: url("../../fonts/zing/ZingScriptRustSBDemo-Base.otf") format("woff");
+  font-family: "ZingRustDemo";
+  src: url("../fonts/zing/ZingScriptRustSBDemo-Base.otf") format("woff");
 }
 .header {
-  font-family: Gilroy, sans-serif;
+  font-family: "Gilroy";
   display: flex;
   align-items: center;
+  color: #fff;
+  padding: 1.5625rem;
 }
 .header__logo {
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.5625rem;
+  margin-right: 4.5rem;
 }
 .header__search {
   display: flex;
   align-items: center;
   padding: 1rem 1.125rem;
   background: #504B4A;
+  border-radius: 0.625rem;
 }
 .header__search input {
+  width: 555px;
   border: none;
   outline: none;
   background: none;
+}
+.header__search input::placeholder {
+  font-size: 1.125rem;
+}
+.header__search ion-icon {
+  font-size: 24px;
+}
+.header__search ion-icon:first-child {
+  margin-right: 1.0625rem;
+}
+.header__info {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.header__info-phone {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.header__info-phone ion-icon {
+  font-size: 20px;
+  padding: 10px;
+  background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
+  border-radius: 50%;
+}
+.header__info-contact {
+  display: flex;
+  flex-direction: column;
+}
+.header__cart {
+  background: none;
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  padding: 1.125rem 1.5rem;
+  background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
+  gap: 0.625rem;
+  border-radius: 0.625rem;
+}
+.header__cart hr {
+  height: 20px;
+}
+.header__cart span:last-child {
+  padding: 0.3125rem 0.5rem;
+  background: #fff;
+  border-radius: 50%;
+  color: #000;
+}
+
+.hamburger {
+  display: none;
 }
 
 * {
