--- a/assets/sass/_var.sass
+++ b/assets/sass/_var.sass
@@ -9,5 +9,5 @@ $shadow-btn: 0px 5px 10px rgba(114, 163, 121, 0.7)
 $hover-shadow: 0px 30px 45px rgba(43, 40, 40, 0.6)
 
 //Fonts
-$font-main: Gilroy, sans-serif
+$font-main: "Gilroy"
 $font-secondary: ZingRustDemo, sans-serif
