--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,45 +59,47 @@
   font-size: 1.5625rem;
   margin-right: 4.5rem;
 }
-.header__search {
+.header__search, .header__search-adaptive {
+  color: #fff;
   display: flex;
   align-items: center;
   padding: 1rem 1.125rem;
   background: #504B4A;
   border-radius: 0.625rem;
+  margin-right: 30px;
+  width: 100%;
 }
-.header__search input {
-  width: 555px;
+.header__search input, .header__search-adaptive input {
+  width: 100%;
   border: none;
   outline: none;
   background: none;
 }
-.header__search input::placeholder {
+.header__search input::placeholder, .header__search-adaptive input::placeholder {
   font-size: 1.125rem;
 }
-.header__search ion-icon {
+.header__search ion-icon, .header__search-adaptive ion-icon {
   font-size: 24px;
 }
-.header__search ion-icon:first-child {
+.header__search ion-icon:first-child, .header__search-adaptive ion-icon:first-child {
   margin-right: 1.0625rem;
 }
-.header__info {
-  display: flex;
-  align-items: center;
-  gap: 30px;
+.header__search-adaptive {
+  display: none;
 }
-.header__info-phone {
+.header__phone {
   display: flex;
   align-items: center;
   gap: 10px;
+  width: 100%;
 }
-.header__info-phone ion-icon {
+.header__phone ion-icon {
   font-size: 20px;
   padding: 10px;
   background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
   border-radius: 50%;
 }
-.header__info-contact {
+.header__phone-contact {
   display: flex;
   flex-direction: column;
 }
@@ -112,21 +114,96 @@
   background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
   gap: 0.625rem;
   border-radius: 0.625rem;
+  transition: 0.6s all;
 }
 .header__cart hr {
   height: 20px;
+  background: rgba(255, 255, 255, 0.3);
 }
-.header__cart span:last-child {
+.header__cart p {
   padding: 0.3125rem 0.5rem;
   background: #fff;
   border-radius: 50%;
   color: #000;
 }
+.header__cart span {
+  font-size: 14px;
+}
+.header__cart ion-icon {
+  display: none;
+}
 
 .hamburger {
   display: none;
 }
+.hamburger p {
+  text-transform: uppercase;
+  opacity: 1;
+}
+.hamburger-inner {
+  background: #65906C;
+}
+.hamburger-inner::after, .hamburger-inner::before {
+  background: #65906C;
+}
 
+.hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner:after, .hamburger.is-active .hamburger-inner:before {
+  background-color: #65906C;
+}
+
+@media screen and (max-width: 1020px) {
+  .hamburger {
+    display: block;
+    z-index: 99;
+  }
+  .header {
+    position: relative;
+    justify-content: space-between;
+  }
+  .header__logo, .header__cart {
+    margin: 0;
+  }
+  .header__cart ion-icon {
+    display: block;
+    font-size: 1.5rem;
+  }
+  .header__cart span {
+    display: none;
+  }
+  .header__phone {
+    max-width: 0;
+    position: absolute;
+    overflow: hidden;
+    top: 95px;
+    z-index: 99;
+    left: 0;
+    width: 100%;
+    flex-direction: column;
+    transition: 0.6s all;
+    background: #CFCFCF;
+    padding: 10px;
+    text-align: center;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .header__phone.is-active {
+    max-width: 150px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header__search {
+    display: none;
+  }
+  .header__search-adaptive {
+    display: flex;
+    box-sizing: border-box;
+  }
+  .header__search-adaptive-block {
+    padding: 1.5625rem;
+  }
+}
 * {
   margin: 0;
   padding: 0;
