--- a/pug/layout/_header.pug
+++ b/pug/layout/_header.pug
@@ -1,20 +1,26 @@
 header.header.container
-  a.header__logo(href="") Logos
-  .header__info 
-    label.header__search(for="search")
-      ion-icon(name='location-outline')
-      input(type="text" id="search" placeholder="Введите адрес доставки")
-      ion-icon(name='search-outline')
-    .header__info-phone 
-      a(href="") 
-        ion-icon(name='call-outline')
-        .header__info-contact 
-          span Контакты
-          a(href="tel:+7 (917) 510-57-59") +7 (917) 510-57-59
-  button.header__cart 
-    span Корзина
-    hr
-    span 4
-  button.hamburger.hamburger--collapse.is-active(type='button')
+  button.hamburger.hamburger--collapse(type='button')
     span.hamburger-box
       span.hamburger-inner
+    p Меню
+  a.header__logo(href="") Logos
+  label.header__search(for="search")
+    ion-icon(name='location-outline')
+    input(type="text" id="search" placeholder="Введите адрес доставки")
+    ion-icon(name='search-outline')
+  .header__phone 
+    a(href="") 
+      ion-icon(name='call-outline')
+      .header__phone-contact 
+        span Контакты
+        a(href="tel:+7 (917) 510-57-59") +7 (917) 510-57-59
+  button.header__cart 
+    ion-icon(name='cart-outline')
+    span Корзина
+    hr
+    p 4
+.header__search-adaptive-block 
+  label.header__search-adaptive(for="search")
+    ion-icon(name='location-outline')
+    input(type="text" id="search" placeholder="Введите адрес доставки")
+    ion-icon(name='search-outline')
