--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,8 @@
 }
 .header__cart hr {
   height: 20px;
-  background: rgba(255, 255, 255, 0.3);
+  width: 0.0625rem;
+  background: rgba(255, 255, 255, 0.3) !important;
 }
 .header__cart p {
   padding: 0.3125rem 0.5rem;
@@ -207,60 +208,6 @@
     width: 100%;
   }
 }
-.about {
-  background: url(../img/aboutBg.png) no-repeat;
-  background-size: cover;
-  min-height: 610px;
-  font-family: "Gilroy";
-}
-.about__content {
-  padding: 70px 100px;
-  color: #fff;
-  display: flex;
-  gap: 130px;
-}
-.about .title__about {
-  font-weight: bold;
-  font-size: 32px;
-  text-transform: uppercase;
-  line-height: 40px;
-  margin-bottom: 26px;
-}
-.about .text__about {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 25px;
-}
-.about .btn {
-  padding-top: 60px;
-}
-.about .btn .about__btn {
-  padding: 20px 40px;
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 10px;
-  backdrop-filter: blur(2.5px);
-  font-size: 14px;
-  color: #fff;
-  text-transform: uppercase;
-}
-
-.icons {
-  background: rgba(80, 75, 74, 0.9);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.icons .icon__img {
-  margin-bottom: 36px;
-  padding-top: 70px;
-}
-
-.about__blog {
-  display: flex;
-  gap: 15px;
-}
-
 .about {
   background: url(../img/aboutBg.png) no-repeat;
   background-size: cover;
@@ -473,6 +420,10 @@ body {
 .container {
   max-width: 80rem;
   margin: 0 auto;
+}
+
+hr {
+  border: none;
 }
 
 /*# sourceMappingURL=style.css.map */
