--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -59,7 +59,8 @@
     transition: .6s all
     hr
       height: 20px
-      background: rgba(255, 255, 255, 0.3)
+      width: .0625rem
+      background: rgba(255, 255, 255, 0.3) !important
     p
       padding: .3125rem .5rem
       background: $white
@@ -96,7 +97,6 @@
       margin: 0
     &__cart
       padding: 15px
-      p
       ion-icon
         display: block
         font-size: 1.5rem
