--- a/assets/sass/_var.sass
+++ b/assets/sass/_var.sass
@@ -3,6 +3,7 @@ $bg-btn: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%)
 $bg: #403C3B
 $white: #fff
 $grey: #CFCFCF
+$green: #618967
 
 //Shadow
 $shadow-btn: 0px 5px 10px rgba(114, 163, 121, 0.7)
