--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,54 @@
     width: 100%;
   }
 }
+.nav {
+  padding: 1.5625rem;
+  font-family: "Gilroy";
+  color: #fff;
+  position: relative;
+}
+.nav::after {
+  width: 100%;
+  box-sizing: border-box;
+  content: "";
+  position: absolute;
+  top: 3.9063rem;
+  right: 0;
+  left: 0;
+  height: 0.0625rem;
+  background: #747070;
+}
+.nav__item {
+  justify-content: space-between;
+  display: flex;
+}
+.nav__item a {
+  position: relative;
+}
+
+.active::after {
+  position: absolute;
+  bottom: -1.25rem;
+  right: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  z-index: 99;
+  height: 0.1875rem;
+  background: #618967;
+  box-shadow: 0px 5px 12px rgba(114, 164, 121, 0.3);
+}
+
+.snacks {
+  font-family: "Gilroy";
+  color: #fff;
+}
+.snacks__title {
+  margin-top: 1.5625rem;
+  border-left: 0.1875rem solid #618967;
+  padding-left: 1.5625rem;
+}
+
 .about {
   background: url(../img/aboutBg.png) no-repeat;
   background-size: cover;
