--- a/assets/sass/pages/_card.sass
+++ b/assets/sass/pages/_card.sass
@@ -38,7 +38,7 @@
 		margin-bottom: 30px
 		.icon-info
 			padding: 12px 12px
-			background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%)
+			background: linear-gradient(114.93deg, $green 5.11%, #72A479 94%)
 			border-radius: 50%
 			color: $white
 			cursor: pointer
@@ -80,7 +80,7 @@
 					display: flex
 					align-items: center
 					gap: 15px
-					background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%)
+					background: linear-gradient(114.93deg, $green 5.11%, #72A479 94%)
 					border-radius: 10px
 					padding: 15px 30px
 					hr
