--- a/pug/includes/_cards.pug
+++ b/pug/includes/_cards.pug
@@ -1,6 +1,6 @@
 nav.nav 
-  .nav__item
-    a(href="") Холодные закуски
+  .nav__item.container
+    a.active(href="") Холодные закуски
     a(href="") Горячие закуски
     a(href="") Мясные блюда
     a(href="") Супы
@@ -8,3 +8,5 @@ nav.nav
     a(href="") Гриль
     a(href="") Фирменные блюда
     a(href="") Напитки
+section.snacks.container
+  h2.snacks__title Холодные закуски
