--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-bottom: 30px;
 }
 .banner-info .info-banner__button .icon-info {
   padding: 12px 12px;
@@ -234,6 +235,10 @@
   color: #fff;
   font-size: 16px;
   font-weight: 600;
+}
+
+.banner-image {
+  object-fit: cover;
 }
 
 .banner .banner__content {
@@ -304,11 +309,18 @@
   margin-bottom: 15px;
 }
 
+.card__title {
+  padding-top: 50px;
+  font-family: "Gilroy";
+  color: #fff;
+}
+
 @media (max-width: 1290px) {
   .blog-navs {
     display: none;
   }
   .banner__content {
+    text-align: center;
     display: flex;
     flex-direction: column;
     padding: 25px;
@@ -324,6 +336,17 @@
     overflow-x: scroll;
   }
 }
+.banner__description {
+  padding-top: 0;
+}
+
+.price__button {
+  padding: 10px 20px;
+}
+.price__button .basket__btn {
+  font-size: 16px;
+}
+
 * {
   margin: 0;
   padding: 0;
