--- a/pug/pages/card/_info.pug
+++ b/pug/pages/card/_info.pug
@@ -35,7 +35,7 @@
 					.banner-span
 						span.titles__span Белки
 						span.titles__span Жиры
-						span.titles__span Углеводы
+						span.titles__span Углеводы 
 						span.titles__span Ккал
 						span.titles__span Вес
 					hr.line
@@ -45,3 +45,6 @@
 						span.grams 22.35
 						span.grams 234
 						span.grams 210
+
+.card__title.container
+	h2.title-blog__cards С ЭТИМ ТОВАРОМ ПОКУПАЮТ
