--- a/pug/includes/_cards.pug
+++ b/pug/includes/_cards.pug
@@ -1,6 +1,6 @@
 nav.nav 
   .nav__item.container
-    a.active(href="") Холодные закуски
+    a(href="") Холодные закуски
     a(href="") Горячие закуски
     a(href="") Мясные блюда
     a(href="") Супы
@@ -10,3 +10,15 @@ nav.nav
     a(href="") Напитки
 section.snacks.container
   h2.snacks__title Холодные закуски
+  .snacks__cards 
+    .snacks__card 
+      img(src="./assets/img/card-1.png", alt="")
+      .snacks__card-info 
+        .snacks__card-title 
+          p Индейка
+          span Вес: 225 г
+        p Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком
+        .snacks__card-btn 
+          button -
+          span 450 ₽
+          button +
