--- a/assets/sass/include/_card.sass
+++ b/assets/sass/include/_card.sass
@@ -18,6 +18,21 @@
     display: flex
     a
       position: relative
+      &::after
+        position: absolute
+        bottom: -1.25rem
+        right: 0
+        left: 0
+        content: ""
+        width: 100%
+        opacity: 0
+        z-index: 99
+        height: .1875rem
+        background: $green
+        box-shadow: 0px 5px 12px rgba(114, 164, 121, 0.3)
+        transition: .6s all
+      &:hover:after
+        opacity: 1
 .active
   &::after
     position: absolute
