--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@
   background-color: #65906C;
 }
 
-@media screen and (max-width: 1020px) {
+@media (max-width: 1020px) {
   .hamburger {
     display: block;
     z-index: 99;
@@ -152,13 +152,12 @@
     display: none;
   }
   .header__phone {
-    max-width: 0;
+    max-width: 9.375rem;
     position: absolute;
     overflow: hidden;
     top: 95px;
     z-index: 99;
-    left: 0;
-    width: 100%;
+    left: -220px;
     flex-direction: column;
     transition: 0.6s all;
     background: #CFCFCF;
@@ -166,13 +165,9 @@
     text-align: center;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding-left: 0;
-    padding-right: 0;
   }
   .header__phone.is-active {
-    max-width: 150px;
-    padding-left: 10px;
-    padding-right: 10px;
+    left: 0;
   }
   .header__search {
     display: none;
@@ -185,7 +180,7 @@
     padding: 1.5625rem;
   }
 }
-@media screen and (max-width: 27.1875rem) {
+@media (max-width: 27.1875rem) {
   .header__logo {
     font-size: 20px;
   }
