--- a/pug/card.pug
+++ b/pug/card.pug
@@ -1,8 +1,9 @@
 extends tmp/_base.pug
 
 block title 
-  title Home page
+  title Card 
 
 block content 
   include pages/card/_info.pug
   include pages/card/_card.pug
+  include pages/card/_contact.pug
