--- a/pug/pages/card/_card.pug
+++ b/pug/pages/card/_card.pug
@@ -3,5 +3,47 @@
 .card-blog.container 
   .cards
     .card 
-      img.card__image(src="../assets/img/card-img1.png" alt="") 
-      
+      img.card__image(src="../assets/img/card-img1.png" alt="")
+      .card-desc__subtitle 
+        h2.chicken-card__title Гусь
+        span.chicken-span Вес:225г 
+      p.chicken-text Фаршированный 
+      .card-price__button 
+        span 17 900 ₽
+        .buttons-card 
+          a.btn-desc(href="#") Корзина
+          ion-icon(name='cart-outline')
+    .card 
+      img.card__image(src="../assets/img/card-img2.png" alt="")
+      .card-desc__subtitle 
+        h2.chicken-card__title Утка
+        span.chicken-span Вес:225г 
+      p.chicken-text Фаршированная рисом, курагой и айвой 
+      .card-price__button 
+        span 17 900 ₽
+        .buttons-card 
+          a.btn-desc(href="#") Корзина
+          ion-icon(name='cart-outline')
+    .card 
+      img.card__image(src="../assets/img/card-img3.png" alt="")
+      .card-desc__subtitle 
+        h2.chicken-card__title Ягненок
+        span.chicken-span Вес:225г 
+      p.chicken-text Фаршированный гречневой кашей, <br> курагой, апельсином и зеленым яблоком
+      .card-price__button 
+        span 17 900 ₽
+        .buttons-card 
+          a.btn-desc(href="#") Корзина
+          ion-icon(name='cart-outline')
+    .card 
+      img.card__image(src="../assets/img/card-img4.png" alt="")
+      .card-desc__subtitle 
+        h2.chicken-card__title Индейка
+        span.chicken-span Вес:225г 
+      p.chicken-text Фаршированный гречневой кашей, <br> курагой, апельсином и зеленым яблоком
+      .card-price__button 
+        span 17 900 ₽
+        
+        .buttons-card 
+          a.btn-desc(href="#") Корзина
+          ion-icon(name='cart-outline')
