--- a/assets/sass/pages/_card.sass
+++ b/assets/sass/pages/_card.sass
@@ -1,5 +1,83 @@
 .card__title
-	padding-top: 50px
-	font-family: $font-main
-	color: $white
+  padding-top: 50px
+  font-family: $font-main
+  color: $white
+  padding-bottom: 20px
 
+.cards
+  display: flex
+  align-items: center
+  font-family: $font-main
+  gap: 20px
+  .card
+    background: linear-gradient(90deg, #494544 0%, #504B4A 100%)
+    border-radius: 10px
+    color: $white
+    margin-bottom: 50px
+    transition: .6s all 
+    height: 385px
+    position: relative
+    &:hover
+      transform: scale(1.010)
+      box-shadow: 0px 30px 45px rgba(43, 40, 40, 0.6)
+      cursor: pointer
+    .card-desc__subtitle
+      display: flex
+      align-items: center
+      justify-content: space-between
+      padding: 15px
+      .chicken-card__title
+        font-weight: bold
+        font-size: 22px
+      .chicken-span
+        font-size: 12px
+        font-weight: 400
+    .chicken-text
+      margin-left: 18px
+      font-size: 13px
+      font-weight: 400
+    .card-price__button
+      padding-top: 40px
+      margin-left: 20px
+      margin-right: 20px
+      display: flex
+      align-items: center
+      justify-content: space-between
+      width: max-content
+      position: absolute
+      gap: 100px
+      bottom: 20px
+      .buttons-card
+        padding: 10px 20px
+        background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%)
+        border-radius: 10px
+        display: flex
+        align-items: center
+        gap: 16px
+        font-size: 14px
+
+.card__image
+  border-radius: 10px
+
+
+
+@include media(1290px)
+  .cards
+    display: flex
+    overflow-x: scroll
+    align-items: center
+  .card
+    height: 420px
+    width: 100%
+  .title-blog__cards
+    font-size: 20px
+    margin-left: 12px
+  .buttons-card
+    padding: 10px 10px
+    font-size: 12px
+  .card-price__button
+    margin-bottom: auto
+    display: flex
+    justify-content: space-between
+    .buttons-card
+      margin-left: auto
