--- a/pug/pages/card/_contact.pug
+++ b/pug/pages/card/_contact.pug
@@ -7,4 +7,25 @@
           .location-data 
             .icon-loc 
               img(src="../assets/img/Location.png", alt="")
-
+            span.span-loc Наш адрес:
+          p.text-loc
+            | МО, городской округ Красногорск, село Ильинкое, Экспериментальная улица, 10
+          .location-data 
+            .icon-loc 
+              img(src="../assets/img/Message.png", alt="")
+            span.span-loc Наша почта:
+          a.loc-email(href="#") auto.wash@gmail.com
+          .location-data__info 
+            .icon-loc__btn
+              a.location__btn(href="#") Забронивать стол
+              //- a.location__btn2(href="#") Продолжить маршрут
+            .info-btn 
+              a.loc-number(href="tel:+7 (917) 510-57-59") +7 (917) 510-57-59
+              span.span-info__number Звоните или оставляйте заявку
+          .icon-social 
+            p.icon-social__text Мы в соц сетях:
+            .social-icons 
+              ion-icon.icon-session__social(name='logo-facebook')
+              ion-icon.icon-session__social(name='logo-vk')
+              ion-icon.icon-session__social(name='logo-youtube')
+              ion-icon.icon-session__social(name='logo-instagram')
