init file-structure basket-page

--- a/assets/sass/pages/_contact.sass
+++ b/assets/sass/pages/_contact.sass
@@ -1,6 +1,7 @@
 .contact-about
   background: url(../img/contact-bg.png) no-repeat
   background-size: cover
+  max-width: 100%
 
 .contact-blog__content
   display: flex
