--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,6 +524,7 @@
 .contact-about {
   background: url(../img/contact-bg.png) no-repeat;
   background-size: cover;
+  max-width: 100%;
 }
 
 .contact-blog__content {
@@ -671,6 +672,40 @@
   border: solid 1px rgba(255, 255, 255, 0.5568627451);
   color: #fff;
   border-radius: 10px;
+}
+
+.blog-navs {
+  padding-top: 30px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  font-family: "Gilroy";
+}
+.blog-navs .nav-card__info {
+  display: flex;
+  gap: 45px;
+  color: #fff;
+  margin-bottom: 30px;
+}
+.blog-navs .nav-card__info .nav__info {
+  position: relative;
+  font-size: 18px;
+  font-weight: 400;
+}
+.blog-navs .nav-card__info .nav__info::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  border-bottom: solid 2px #fff;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  transition: 0.6s all;
+}
+.blog-navs .nav-card__info .nav__info:hover::before {
+  opacity: 1;
+  width: 100%;
+  height: 2px;
 }
 
 * {
